drawer: rm'ed media key from features.json; no space around card image; card blurb spacing fixed.

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -784,16 +784,17 @@ input[type="search"].tree_search::-webkit-search-cancel-button {
 .sjpp-track {
     background-color: white;
     border-radius: 5px;
-    padding: 10px 5px 10px 5px;
+    padding: 0px;
     display: grid;
-    grid-template-columns: 2fr 9fr 40px;
-    grid-template-areas: 'image header header' 'image blurb blurb';
+    grid-template-columns: 2fr 6fr;
+    grid-template-areas: 'image header' 'image blurb';
     gap: 5px;
     align-items: center;
     justify-items: left;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+    overflow: hidden;
 }
 
 .sjpp-track::after {
@@ -824,8 +825,8 @@ input[type="search"].tree_search::-webkit-search-cancel-button {
     grid-area: image;
     width: 75px;
     height: 75px;
-    align-self: center;
-    justify-self: center;
+    align-self: start;
+    justify-self: start;
 }
 
 .sjpp-track-image img {
@@ -860,8 +861,6 @@ input[type="search"].tree_search::-webkit-search-cancel-button {
   box-shadow: 0 2px 7.5px rgba(0, 0, 0, 0.3);
   opacity: 1;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  right: -5%;
-  top: 5%;
   transform: rotate(-45deg);
 }
 
@@ -876,32 +875,20 @@ input[type="search"].tree_search::-webkit-search-cancel-button {
 
 .sjpp-track-h {
     grid-area: header;
-    display: inline-block;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 10px;
+    margin-left: 5px;
     padding: 0px;
 }
 
 .sjpp-track-blurb {
     grid-area: blurb;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: 300;
-    /* font-style: oblique; */
+    margin-left: 5px;
+    justify-content: center;
+    font-style: oblique;
     color: #403f3f;
 }
-
-/* .sjpp-track-links>a, .sjpp-landing-page-a {
-    grid-area: media;
-    display: inline;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 0px 0px 0px 8px;
-    text-align: center;
-    font-size: 12px;
-    align-content: center;
-    justify-content: center;
-    border-style: none;
-    font-style: normal;
-} */
 
 .sj-toggle-button {
     margin: 0;
